--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://realnimish.github.io/avalanche-amm",
-  "name": "avalanche-amm",
+  "homepage": "http://tylrdnns.github.io/AMM",
+  "name": "AMM",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
